<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024 Yet Another AOSP Project
                   2016-2022 crDroid Android Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- SpesParts -->
    <string name="spes_parts_title">SpesParts</string>
    <string name="spes_parts_summary">Configure device specific settings</string>
    <string name="spes_parts_warning_title">Warning</string>
    <string name="spes_parts_warning_text">Most of these features rely on specific kernel nodes in order to function. When flashing a custom kernel, you risk the possibility of losing access to some of these features. You have been warned!</string>
    <string name="spes_parts_dialog">OK</string>
    <string name="kernel_node_access_error">Kernel node access failed! Please ensure the provided path to the sysfs or procfs attribute is accurate, that it has appropriate permissions, and the SELinux policies are properly configured.</string>
    <string name="kernel_node_returned_value_unknown">No string resource found for the value returned by the node.</string>
    <string name="tile_add">Add tile</string>
    <string name="tile_added">Tile added</string>
    <string name="tile_not_added">Tile not added</string>
    <string name="tile_already_added">Tile already added</string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>

    <!-- CPU -->
    <string name="category_cpu">CPU</string>
    <string name="power_efficient_workqueue_title">Power efficient workqueue</string>
    <string name="power_efficient_workqueue_summary">Save power by rescheduling work to a core that is already awake</string>

    <!-- Display -->
    <string name="category_display">Display</string>
    <string name="saturation_title">Saturation</string>
    <string name="saturation_summary">Control the saturation level of the display</string>
    <string name="saturation_footer_summary">Changing the color mode in display settings will override the saturation level, requiring it to be reapplied.</string>

    <!-- UiBench -->
    <string name="category_uibench">UiBench</string>
    <string name="jitter_test_title">Jitter</string>
    <string name="jitter_test_summary">Calculate rendering jitter</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

</resources>
